# whatdidyoudo

./: .gitignore  README.md  pyproject.toml  run.py  run_test.py
static_dir/: Impressum und Datenschutzerklärung.html
tests/: __init__.py  test_app.py  test_functions.py
whatdidyoudo/: __init__.py  app.py
whatdidyoudo/static/: style.css
whatdidyoudo/templates/: form.html  index.html  result.html  static_page.html
