[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatdidyoudo"
version = "0.1.0"
description = "A minimal Flask app that shows the amount of OpenStreetMap changes made by a user on a day."
authors = [
    { name = "Ulf Rompe", email = "whatdidyoudo.rompe.org@rompe.org" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.3",
    "flask-caching==2.3.1",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "Ruff>=0.13.2",
    "types-requests>=2.32.4",
    "hatchling>=1.27.0",
    "twine>=6.2.0",
]

[tool.uv]
# uv-specific settings go here

[tool.ruff]
line-length = 100
target-version = "py311"
