[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["whatdidyoudo"]
[tool.hatch.version]
source = "code"
path = "whatdidyoudo/__init__.py"

[project]
name = "whatdidyoudo"
dynamic = ["version"]
description = "A minimal Flask app that shows the amount of OpenStreetMap changes made by a user on a day."
authors = [
    { name = "Ulf Rompe", email = "whatdidyoudo.rompe.org@rompe.org" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.3",
    "flask-caching==2.3.1",
    "flask-limiter>=4.0.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "Ruff>=0.13.2",
    "types-requests>=2.32.4",
    "hatchling>=1.27.0",
    "twine>=6.2.0",
    "pytest>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/rompe/whatdidyoudo"
Issues = "https://github.com/rompe/whatdidyoudo/issues"


[tool.uv]
# uv-specific settings go here

[tool.ruff]
line-length = 100
target-version = "py311"
